# smartjob-trigger-service

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
smartjob_trigger_service/: Makefile  entrypoint.sh  main.py  pyproject.toml
